- error in liber.lua (comments) (thanks emaury)
- fixed popforward
- now the popserver disconnects after 60 seconds of client inactivity (this is
RFC compliant, even if the rfc says we should wait more maybe, and the NOP
pop3 command is used to avoid timeouts.
- added --fpat to force proxy auth method
- some stuff that may fix win32 shutdown problems
- fixed dothack bug
- gmail \r\r\n and \r\n\n issue fixed
- gmail has an auto learn \r-\n-issue procedure and fix
- fixed hotmail and yahoo (thanks russell)
08/09/2004 0.0.16 major feature release
- fixed the gmail plugin and added some parameters (thanks rami)
- owa.lua moved to davmail.lua
- fixed ebuild (thanks er_capoccia)
- added support for w3c date format in aggregator.lua
- httpmail now uses iso-8859-1 instead of utf8 since Windows-1252 is 8 bit
- added support for charset encoding in aggregator.lua
- added support for content tag in aggregator.lua
- added suport for host=hostname:port to popforward.lua
- added the pipe and pipe_limit options to popforward.lua
- added the io.dpopen lua primitive unter unix
- some pretty stuff for make
- added -x, --toxml to export plugin description to XML
- fixed building tgz-dist from the sources (not from CVS)
- fixed owa.lua double stat() (thanks hetfield)
- added owa.lua for httpmail based webmails
- added some methods to browser to easily implement DAV
- added httpmail-DAV implementation
- fixed gmail.lua \r\n issue
- added luaexpat bindings
- added aol.lua (thanks to russell)
- adedd the arrow winsystray stuff (thanks russells)
- added option -k to kill the running freepopsd
- fixed URL decoding for plugin parameters and added support for space
represented as + character
- added standard folders support for yahoo.it
- added yahoo.it support to yahoo.lua
- added linuxgazette.net aggregator domains
08/08/2004 0.0.14 fix release
- fixed gmail login procedure
- fixed some stuff in cookie.lua
- added yahoo.lua (thanks russell)