@@ -32,6 +32,7 @@ MODULES-Common= lua		\
 		luaexpat	\
 		xmltables_lua	\
 		httpmail_lua	\
+		crypto_lua	\
 		luadoc		\
 		plugins2xml_lua	\
 		luafull
