@@ -1,0 +1,6 @@
+#ifndef LUA_CRYPTO_H
+#define LUA_CRYPTO_H
+
+int luaopen_crypto(lua_State*);
+
+#endif
