@@ -31,7 +31,8 @@ MK_TEMPLATE=	luabind \
 		regularexp_lua	\
 		xmltables_lua	\
 		httpmail_lua	\
-		plugins2xml_lua
+		plugins2xml_lua	\
+		crypto_lua
 
 MK_TEMPL_CTRIB=	lua \
 		pthread \
