@@ -41,15 +41,16 @@
 #define LUABOX_REGULAREXP	(1<<15)
 #define LUABOX_LXP		(1<<16)
 #define LUABOX_LOG		(1<<17)
+#define LUABOX_CRYPTO		(1<<18)
 
 #define LUABOX_FREEPOPS	(LUABOX_POP3SERVER|LUABOX_MLEX|LUABOX_STRINGHACK|\
 			 LUABOX_SESSION|LUABOX_CURL|LUABOX_PSOCK|\
 			 LUABOX_BASE64|LUABOX_GETDATE|LUABOX_REGULAREXP|\
-			 LUABOX_LXP|LUABOX_LOG)
+			 LUABOX_LXP|LUABOX_LOG|LUABOX_CRYPTO)
 
 #define LUABOX_FULL (LUABOX_STANDARD|LUABOX_FREEPOPS)
 
-#define LUABOX_LAST 18
+#define LUABOX_LAST 19
 
 //! generates a luaVM loading initial_stuff libraries
 lua_State* luabox_genbox(unsigned long intial_stuff);
